# Beautifuleyes

./: .gitignore  README.md
mcu/: CMakeLists.txt  Makefile
mcu/main/: CMakeLists.txt  FrameDecoder.cpp  FrameDecoder.h  FrameEncoder.cpp  FrameEncoder.h  SerialPort.cpp  SerialPort.h  TouchElement.cpp  TouchElement.h  TouchSense.cpp  TouchSense.h  main.cpp
pc/: CMakeLists.txt  SignalChart.cpp  SignalChart.h  Uart.cpp  Uart.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
